# todo-oauth

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diagram.md  docker-compose.yml  docs.md  presentation.html  run.sh  setup_keycloak.sh  todos.json
src/: main.rs
templates/: index.html  landing.html
