[package]
name = "todo-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "auth", "cors"] }
askama = "0.12"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
jsonwebtoken = "9"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tracing-subscriber = "0.3"
once_cell = "1"
base64 = "0.21"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1.41"
chrono = "0.4"
http = "1.3.1"

[package.metadata.askama]
dir = "templates"